# intelligence_engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Getting Started.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.AgentPlatform/Sample Data/: README.md
.AgentPlatform/Sample Data/Job Files/: JD_ Senior Machine Learning Scientist - Applied Research.docx
alembic/: env.py
alembic/versions/: 1d5a30efc452_add_workflow_name.py  6d3a8a99852f_add_workflow_definitions.py  9e7bc2c8b3d1_add_playbook_settings.py  a91d5f3c2e10_add_workflow_runs.py  b8f02e58c5a9_move_tools_from_playbooks_to_workflows.py  c3cc760ac4d7_initial_app_settings.py  d4e8f1a2b3c4_add_workflow_seed_slug.py
app/: config.py  database.py  main.py  models.py
app/routers/: dashboard.py  playbooks.py  runs.py  settings.py  tools.py  workflows.py
app/seed/: sample_workflows.py
app/seed/sample_workflows/: job_candidate_review.json  submit_candidate_review.json
app/services/: browser.py  prompts.py  run_display.py  run_fix_analyzer.py  workflow_prompts.py  workflow_runner.py
app/services/ai/: anthropic_provider.py  base.py  bedrock_provider.py  gemini_provider.py  openai_provider.py  registry.py  tools.py
app/services/mcp/: __init__.py  client.py  (+4 more)
app/templates/: base.html  dashboard.html  playbooks.html  run_detail.html  runs.html  settings.html  tools.html  workflow_detail.html  workflow_form.html  workflows.html
docs/: Intelligence Engine.md  Product Requirements Document.md  Technical Design Document.md
docs/Mock Data/: README.md
scripts/: install-agent-platform-mac.sh
(+6 files in other folders)
